[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://fundo (1).jpg" type="Texture" id=2]
[ext_resource path="res://joystix_monospace_font.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Fundo(1)" type="Sprite" parent="."]
modulate = Color( 0.462745, 0.462745, 0.462745, 1 )
position = Vector2( 640, 360 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Start" type="Button" parent="."]
margin_left = 536.0
margin_top = 248.0
margin_right = 768.0
margin_bottom = 328.0
custom_fonts/font = SubResource( 1 )
text = "START"

[node name="Tutorial" type="Button" parent="."]
margin_left = 536.0
margin_top = 360.0
margin_right = 768.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 1 )
text = "TUtorial"

[node name="Sair" type="Button" parent="."]
margin_left = 536.0
margin_top = 472.0
margin_right = 768.0
margin_bottom = 552.0
custom_fonts/font = SubResource( 1 )
text = "Sair"

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="Sair" to="." method="_on_Sair_pressed"]
